[#155741474] Fixed add note jumping.

--- a/reactjs/components/atoms/LessonNotebookOpenCTA/_styles.scss
+++ b/reactjs/components/atoms/LessonNotebookOpenCTA/_styles.scss
@@ -6,8 +6,8 @@
     height: 52px;
 
     @include media-breakpoint-up(md) {
-      width: 65px;
-      height: 65px;
+      width: 64px;
+      height: 64px;
     }
   }
 }
